welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:7: error: ';' expected but 'else' found.
	else {
        ^